add /reverse and /foo

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ configurations {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.apache.commons:commons-lang3:3.3.2")
 
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
