--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,6 @@ springBoot {
 task createWrapper(type: Wrapper) {
     gradleVersion = '1.12'
 }
+
+// Make sure that bootRepackage builds an executable jar *and* a war
+bootRepackage.dependsOn = [jar, war]
