--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE")
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE'
     }
 }
 
@@ -22,19 +22,19 @@ configurations {
 }
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-actuator")
-    compile("org.apache.commons:commons-lang3:3.3.2")
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-actuator'
+    compile 'org.apache.commons:commons-lang3:3.3.2'
 
-    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
-    testCompile("org.codehaus.groovy:groovy-all:2.2.2")
-    testCompile("org.spockframework:spock-core:0.7-groovy-2.0")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile 'org.codehaus.groovy:groovy-all:2.2.2'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
 springBoot {
-    mainClass = "com.example.application.Application"
+    mainClass = 'com.example.application.Application'
 }
 
 task createWrapper(type: Wrapper) {
